--- a/AIEOpenGL.vcxproj
+++ b/AIEOpenGL.vcxproj
@@ -19,7 +19,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="PhysicsObject.cpp" />
+    <ClCompile Include="src\Physics\PhysicObjects\DIYRigidBody.cpp" />
+    <ClCompile Include="src\Physics\PhysicObjects\PhysicsObject.cpp" />
     <ClCompile Include="src\Physics\PhysicsScene.cpp" />
     <ClCompile Include="src\BaseApplication\BaseApplication.cpp" />
     <ClCompile Include="src\BaseApplication\Camera.cpp" />
@@ -29,6 +30,7 @@
     <ClCompile Include="src\BaseApplication\MyApplication.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Physics\PhysicObjects\DIYRigidBody.h" />
     <ClInclude Include="src\Physics\PhysicObjects\PhysicsObject.h" />
     <ClInclude Include="src\Physics\PhysicsScene.h" />
     <ClInclude Include="src\BaseApplication\BaseApplication.h" />
