--- a/AIEOpenGL.vcxproj.filters
+++ b/AIEOpenGL.vcxproj.filters
@@ -36,7 +36,10 @@
     <ClCompile Include="src\Physics\PhysicsScene.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="PhysicsObject.cpp">
+    <ClCompile Include="src\Physics\PhysicObjects\PhysicsObject.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Physics\PhysicObjects\DIYRigidBody.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -60,6 +63,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\Physics\PhysicObjects\PhysicsObject.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Physics\PhysicObjects\DIYRigidBody.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
