--- a/AIEOpenGL.vcxproj
+++ b/AIEOpenGL.vcxproj
@@ -19,7 +19,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\Physics\PhysicObjects\DIYRigidBody.cpp" />
+    <ClCompile Include="src\Physics\PhysicObjects\RigidBody\Sphere.cpp" />
+    <ClCompile Include="src\Physics\PhysicObjects\RigidBody\DIYRigidBody.cpp" />
     <ClCompile Include="src\Physics\PhysicObjects\PhysicsObject.cpp" />
     <ClCompile Include="src\Physics\PhysicsScene.cpp" />
     <ClCompile Include="src\BaseApplication\BaseApplication.cpp" />
@@ -30,7 +31,8 @@
     <ClCompile Include="src\BaseApplication\MyApplication.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\Physics\PhysicObjects\DIYRigidBody.h" />
+    <ClInclude Include="src\Physics\PhysicObjects\RigidBody\Sphere.h" />
+    <ClInclude Include="src\Physics\PhysicObjects\RigidBody\DIYRigidBody.h" />
     <ClInclude Include="src\Physics\PhysicObjects\PhysicsObject.h" />
     <ClInclude Include="src\Physics\PhysicsScene.h" />
     <ClInclude Include="src\BaseApplication\BaseApplication.h" />
@@ -116,7 +118,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(ProjectDir)src\BaseApplication\;$(ProjectDir)src\Physics\;$(ProjectDir)src\Physics\PhysicObjects\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)src\BaseApplication\;$(ProjectDir)src\Physics\;$(ProjectDir)src\Physics\PhysicObjects\;$(ProjectDir)src\Physics\PhysicObjects\RigidBody\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -146,7 +148,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(ProjectDir)src\BaseApplication\;$(ProjectDir)src\Physics\;$(ProjectDir)src\Physics\PhysicObjects\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)src\BaseApplication\;$(ProjectDir)src\Physics\;$(ProjectDir)src\Physics\PhysicObjects\;$(ProjectDir)src\Physics\PhysicObjects\RigidBody\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
