--- a/AIEOpenGL.vcxproj
+++ b/AIEOpenGL.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Physics\PhysicObjects\Plane.cpp" />
     <ClCompile Include="src\Physics\PhysicObjects\RigidBody\Sphere.cpp" />
     <ClCompile Include="src\Physics\PhysicObjects\RigidBody\DIYRigidBody.cpp" />
     <ClCompile Include="src\Physics\PhysicObjects\PhysicsObject.cpp" />
@@ -31,6 +32,7 @@
     <ClCompile Include="src\BaseApplication\MyApplication.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Physics\PhysicObjects\Plane.h" />
     <ClInclude Include="src\Physics\PhysicObjects\RigidBody\Sphere.h" />
     <ClInclude Include="src\Physics\PhysicObjects\RigidBody\DIYRigidBody.h" />
     <ClInclude Include="src\Physics\PhysicObjects\PhysicsObject.h" />
@@ -46,6 +48,7 @@
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>AIEOpenGL</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
+    <ProjectName>PhysicsEngine</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
